; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/atheros/atlx/extr_atl2.c_init_ring_ptrs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/atheros/atlx/extr_atl2.c_init_ring_ptrs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atl2_adapter = type { i64, i32, i64, i64, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.atl2_adapter*)* @init_ring_ptrs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_ring_ptrs(%struct.atl2_adapter* %0) #0 {
  %2 = alloca %struct.atl2_adapter*, align 8
  store %struct.atl2_adapter* %0, %struct.atl2_adapter** %2, align 8
  %3 = load %struct.atl2_adapter*, %struct.atl2_adapter** %2, align 8
  %4 = getelementptr inbounds %struct.atl2_adapter, %struct.atl2_adapter* %3, i32 0, i32 5
  store i64 0, i64* %4, align 8
  %5 = load %struct.atl2_adapter*, %struct.atl2_adapter** %2, align 8
  %6 = getelementptr inbounds %struct.atl2_adapter, %struct.atl2_adapter* %5, i32 0, i32 4
  %7 = call i32 @atomic_set(i32* %6, i32 0)
  %8 = load %struct.atl2_adapter*, %struct.atl2_adapter** %2, align 8
  %9 = getelementptr inbounds %struct.atl2_adapter, %struct.atl2_adapter* %8, i32 0, i32 3
  store i64 0, i64* %9, align 8
  %10 = load %struct.atl2_adapter*, %struct.atl2_adapter** %2, align 8
  %11 = getelementptr inbounds %struct.atl2_adapter, %struct.atl2_adapter* %10, i32 0, i32 2
  store i64 0, i64* %11, align 8
  %12 = load %struct.atl2_adapter*, %struct.atl2_adapter** %2, align 8
  %13 = getelementptr inbounds %struct.atl2_adapter, %struct.atl2_adapter* %12, i32 0, i32 1
  %14 = call i32 @atomic_set(i32* %13, i32 0)
  %15 = load %struct.atl2_adapter*, %struct.atl2_adapter** %2, align 8
  %16 = getelementptr inbounds %struct.atl2_adapter, %struct.atl2_adapter* %15, i32 0, i32 0
  store i64 0, i64* %16, align 8
  ret void
}

declare dso_local i32 @atomic_set(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
